fixed too long app name

--- a/webui/css/bridge.css
+++ b/webui/css/bridge.css
@@ -316,14 +316,24 @@ img {
     position: relative;
     width: 100%;
     height: 100%;
+    overflow: hidden;
+    display: -webkit-flex;  // for Safari
+    display: -ms-flexbox;   // for IE
+    display: flex;          // for real browsers
+    -webkit-flex-flow: row nowrap;  // for Safari
+    -ms-flex-flow: row nowrap;      // for IE
+    flex-flow: row nowrap;          // for real browsers
+    flex-wrap: nowrap;
+    flex-direction: row;
 }
 .box-title {
-    display: inline;
     font-size: 14px;
-    line-height: 32px;
     text-transform: uppercase;
     font-style: italic;
     font-weight: bold;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .copy_head{
